@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200304"
-#define public MagickPackageReleaseDate "snapshot-20200304"
+#define public MagickPackageVersionAddendum ".020200307"
+#define public MagickPackageReleaseDate "snapshot-20200307"
