@@ -4,31 +4,32 @@
 animate.c          Interactively animate an image sequence
 annotate.c         Annotate an image with text
 attribute.c        Access key,value image attributes
-average.c	   Image averaging functions
+average.c          Image averaging functions
 blob.c             Read or write formatted images in memory (BLOBs)
-cdl.c		   Apply ASC CDL transform to image
+cdl.c              Apply ASC CDL transform to image
 channel.c          Image channel functions
 color.c            Color related functions
-colormap.c	   Colormap related functions
+colormap.c         Colormap related functions
 constitute.c       Read or write an image
 compare.c          Compare images
 composite.c        Merge image pixels using a specified algorithm
 confirm_access.c   Access confirmation functions
 decorate.c         Add decorative frames and borders
 deprecate.c        Methods which should no longer be used
-describe.c	   Methods to describe an image
+describe.c         Methods to describe an image
 display.c          Interactively display and edit an image
-export.c	   Export image pixels into common representations
+export.c           Export image pixels into common representations
 render.c           Low-level methods to draw on an image
 draw.c             User-friendly methods to draw on an image
 effect.c           Image effects methods
 fx.c               Image special effects methods
 enhance.c          Methods to enhance or adjust an image
 error.c            Error reporting methods
-hclut.c		   Apply Hald CLUT to image
+hclut.c            Apply Hald CLUT to image
 image.c            Miscellaneous image methods
-import.c	   Import image pixels from common representations
+import.c           Import image pixels from common representations
 list.c             Image list support
+log.c              Event logging support
 magick.c           Image format support interfaces
 memory.c           Memory allocation/deallocation functions
 monitor.c          Progress monitor support
@@ -37,7 +38,7 @@ operator.c         Methods to apply mathematic or boolean operators to pixels.
 paint.c            Methods to fill image pixel regions
 pixel_cache.c      Image pixel cache (working pixels).
 pixel_iterator.c   Pixel iterator pattern support functions
-plasma.c	   Create a Plasma fractal image.
+plasma.c           Create a Plasma fractal image.
 profile.c          Manipulate embedded profiles
 quantize.c         Reduce the number of colors in an image
 registry.c         In-memory image registration interface
@@ -45,11 +46,11 @@ resource.c         Set resource consumption limits (e.g. memory)
 segment.c          Segment and image with thresholding using the fuzzy c-means method
 shear.c            Rotate image, shear image, or apply a 2D affine transformation
 signature.c        Add a digital signature to the image
-statistics.c	   Compute image statistics
-texture.c	   Image texture functions
+statistics.c       Compute image statistics
+texture.c          Image texture functions
 transform.c        Crop, flip, flop, roll, coalesce, etc.
 resize.c           Resize an image
 widget.c           X11 Widgets
-drawing_wand.c	   Wand vector drawing interfaces
-magick_wand.c	   Wand image processing interfaces
-pixel_wand.c	   Wand pixel access interfaces
+drawing_wand.c     Wand vector drawing interfaces
+magick_wand.c      Wand image processing interfaces
+pixel_wand.c       Wand pixel access interfaces
