@@ -77,6 +77,7 @@ and normalize</li>
 <li><a class="reference external" href="image.html">Image</a>: Miscellaneous image methods</li>
 <li><a class="reference external" href="import.html">Import</a> : Import image pixels from common representations</li>
 <li><a class="reference external" href="list.html">List</a>: Manage image lists</li>
+<li><a class="reference external" href="log.html">Log</a>: Event logging support</li>
 <li><a class="reference external" href="magick.html">Magick</a>: Image format support interfaces</li>
 <li><a class="reference external" href="memory.html">Memory</a>: Memory allocation methods</li>
 <li><a class="reference external" href="monitor.html">Monitor</a>: Progress monitor callbacks</li>
@@ -89,6 +90,7 @@ and normalize</li>
 <li><a class="reference external" href="profile.html">Profile</a>: Attached profile access</li>
 <li><a class="reference external" href="quantize.html">Quantize</a>: Reduce image colors or assign image colors from colormap</li>
 <li><a class="reference external" href="registry.html">Registry</a>: Store and retrieve images in memory by ID</li>
+<li><a class="reference external" href="render.html">Render</a>: Render vector graphics</li>
 <li><a class="reference external" href="resize.html">Resize</a>: Resize an Image</li>
 <li><a class="reference external" href="resource.html">Resource</a>: Set and get resource limits</li>
 <li><a class="reference external" href="segment.html">Segment</a>: Coalese similar image colors</li>
