@@ -59,7 +59,7 @@ HistogramColorPacket *GetColorHistogram( const <a class="reference external" hre
 which specify the number of times each unique color occurs in the image.
 The referenced colors parameter is updated with the number of unique colors
 in the image. The returned array should be deallocated by the user once it
-is no longer ndded.</p>
+is no longer needed.</p>
 <p>The format of the GetColorHistogram method is:</p>
 <pre class="literal-block">
 HistogramColorPacket *GetColorHistogram( const <a class="reference external" href="../api/types.html#image">Image</a> *, unsigned long *colors,
