@@ -84,7 +84,7 @@ void DestroyDrawInfo( <a class="reference external" href="../api/types.html#draw
 <div class="section" id="id2">
 <h2>Description</h2>
 <p>DestroyDrawInfo() deallocates memory associated with an DrawInfo
-structure.</p>
+structure.  Nothing is done if the pointer passed is NULL.</p>
 <p>The format of the DestroyDrawInfo method is:</p>
 <pre class="literal-block">
 void DestroyDrawInfo( <a class="reference external" href="../api/types.html#drawinfo">DrawInfo</a> *draw_info );
